<resources>
    <string name="app_name">WalkPal</string>

    <string name="completed_walks">"Completed Walks</string>
    <string name="fav_walks">"Favourite Walks</string>

    <string name="mlab_api">Sp-vJvuovvpQqzMiyuLGf7n-WG7e7RbF</string>
    <string name="accu_weather_api">tCiIuvak1ZxqDc51RFKnsSlVaK7nhfJn</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Delete Account</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>

    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Sign Up Now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>


    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Passwrod</string>

    <string name="btn_view_walks">View Walks</string>
    <string name="btn_view_fav_walks">View Favourites Walks</string>
    <string name="btn_view_completed_walks">View Completed Walks</string>
    <string name="btn_view_suggested_walks">View Suggested Walks</string>
    <string name="btn_add_walk">Add Walk</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>

    <string name="add_county">Add County</string>
    <string name="view_county">View Counties</string>




    <string name="hint_walk_name">Add Walk Name</string>
    <string name="hint_walk_format">Add Walk Format</string>
    <string name="hint_walk_diff">Add Walk Diffuctly</string>
    <string name="hint_walk_length">Add Walk Length</string>

    <string name="nav_home">Home</string>
    <string name="nav_view">View</string>
    <string name="nav_add">Add</string>
    <string name="View_All_Walks">View All Walks</string>
    <string name="Select_walk_by">Select Walk By County</string>
    <string name="one">One</string>
    <string name="view_by_counites">View By Counties</string>

    <string name="temperature">Temperature</string>
    <string name="condition">Condition</string>
    <string name="location">Location</string>
    <string name="powered_by_yahoo">powered by Yahoo!</string>
    <string name="condition_icon">Condition Icon</string>
    <string name="loading">Loading&#8230;</string>
    <string name="temperature_output">%1$d&#176;%2$s</string>
    <string name="update_location">Update Location</string>
    <string name="settings">Settings</string>
    <string name="cache_exception">No Cached Weather Data</string>
    <string name="location_permission_needed">Device location is needed for Weather GeoLocation</string>
    <string name="disable_geolocation">Change Settings</string>
    <string name="day">Day</string>
    <string name="high">High</string>
    <string name="low">Low</string>

    <string-array name="counties">
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Donegal</item>
        <item>Dublin</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
        <item>Tyrone</item>
    </string-array>
</resources>
