<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddWalk">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <EditText
            android:id="@+id/add_walk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_county"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText
            android:id="@+id/walk_diffuctly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_walk_diff"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText
            android:id="@+id/walk_format"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_walk_format"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />
        <EditText
            android:id="@+id/walk_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_walk_length"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:visibility="gone" />



        <Button
            android:id="@+id/firebase_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            android:text="@string/add_county"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNav_View"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom"
        app:menu="@menu/nav_items"></android.support.design.widget.BottomNavigationView>


</android.support.design.widget.CoordinatorLayout>